# giga-flow-mlops

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  base-training.Dockerfile  base.Dockerfile  dashboard.Dockerfile  docker-compose.ci.yml  docker-compose.yml  dvc.yaml  mkdocs.yml  mlflow.Dockerfile  params.yaml  pyproject.toml  requirements-dev.txt  requirements-inference.txt  requirements-training.txt  requirements.txt  training.Dockerfile
.dvc/: config
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  training.yml
data/: IMDB Dataset.csv.dvc  amazon_reviews_sample.csv.dvc  twitter_sentiment_sample.csv.dvc
docs/: api-reference.md  architecture.md  getting-started.md  index.md  models.md  monitoring.md
drift_monitor/: monitor.py
grafana/dashboards/: gigaflow-overview.json
grafana/provisioning/dashboards/: dashboards.yml
k8s/: README.md  model-service.yaml  secrets.yaml
postgres/: init.sh
prometheus/: alert_rules.yml  prometheus.yml
scripts/: promote_model.py
src/: debug_model_service.py
src/dashboard/: app.py  requirements.txt
src/drift_monitor/: monitor.py
src/model_service/: main.py
src/notebooks/: 01_model_training.ipynb
src/producer/: producer.py
tests/: conftest.py  locustfile.py  test_api.py  test_drift_monitor.py  test_kafka_validation.py  test_producer.py  test_promotion.py
